namespaces/nagios/node-assignment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nagios
spec:
  template:
    spec:

      nodeSelector:
        lifetime: persistent

      tolerations:
      - key: cloud.google.com/gke-preemptible
        operator: Equal
        value: "false"
        effect: NoSchedule
