namespaces/nagios/serviceaccount-assignment.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: not-important
spec:
  template:
    spec:
      serviceAccountName: nagios
