namespaces/nagios/wireguard-sidecar.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:

      - name: wireguard
        command:
        - /entrypoint.sh
        image: masipcat/wireguard-go
        resources:
          limits:
            cpu: 1000m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - name: cfgmap
          mountPath: /etc/wireguard/wg0.conf
          subPath: wg0.conf
        - name: keymaterial
          mountPath: /secret/wg-key

      volumes:
      - name: cfgmap
        configMap:
          name: wireguard-conf
          defaultMode: 420
      - name: keymaterial
        secret:
          secretName: wireguard-key
          defaultMode: 420
