namespaces/nagios/auth-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagios-proxy
  labels:
    app: nagios-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nagios-proxy
  template:
    metadata:
      labels:
        app: nagios-proxy
    spec:
      containers:

      - name: auth
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.0
        ports:
        - containerPort: 4180
          name: http
        args:
        - -upstream
        - http://nagios-http
        - -config
        - /conf/oauth2_proxy.cfg
        - -skip-provider-button
        volumeMounts:
        - name: auth-config
          mountPath: /conf
        readinessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 5
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
          initialDelaySeconds: 5
          periodSeconds: 60

      volumes:
      - name: auth-config
        configMap:
          name: nagios-auth-config

      tolerations:
      - key: cloud.google.com/gke-preemptible
        operator: Equal
        value: "true"
        effect: NoSchedule

---
apiVersion: v1
kind: Service
metadata:
  name: nagios-proxy
  labels:
    app: nagios-proxy
spec:
  type: ClusterIP
  selector:
    app: nagios-proxy
  ports:
  - name: http
    port: 80
    targetPort: 4180

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nagios-fe
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "120"
    kubernetes.io/ingress.class: internet
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - nagios.devmode.cloud
    secretName: tls-nagios.devmode.cloud
  rules:
  - host: nagios.devmode.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: nagios-proxy
          servicePort: 80
